Certification app component/certpkg/force-app/main/default/objects/Associates__c/Associates__c.object-meta.xml
<CustomObject>
    <label>Associate</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Serial No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>