Certification app component/certpkg/force-app/main/default/objects/Associates__c/fields/usrLocation__c.field-meta.xml
<CustomField>
    <fullName>usrLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Associate</relationshipLabel>
    <relationshipName>Associate</relationshipName>
    <type>Lookup</type>
</CustomField>