Certification app component/certpkg/force-app/main/default/objects/Associates__c/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <label>Verification Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>